k8s/deployment-i2v-neural.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i2v-neural
spec:
  replicas: 1
  selector:
    matchLabels:
      app: i2v-neural
  template:
    metadata:
      labels:
        app: i2v-neural
    spec:
      containers:
      - name: i2v-neural
        image: semitechnologies/img2vec-pytorch:resnet50
        ports:
        - containerPort: 8080
