k8s/service-weaviate-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: weaviate-ui
spec:
  type: LoadBalancer
  selector:
    app: weaviate-ui
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 7777
