k8s/service-weaviate.yaml
apiVersion: v1
kind: Service
metadata:
  name: weaviate
spec:
  type: ClusterIP
  selector:
    app: weaviate
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: weaviate-http
  - protocol: TCP
    port: 50051
    targetPort: 50051
    name: weaviate-grpc
